--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express": "^4.17.1",
         "express-fileupload": "^1.2.0",
         "express-jwt": "^6.0.0",
+        "express-session": "^1.17.1",
         "gitlab": "^14.2.2",
         "joi": "^17.2.0",
         "jsonwebtoken": "^8.5.1",
